Updated icons and bump version 2.0.64

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -407,7 +407,7 @@
   text-align: left;
 }
 
-.button.button-with-icon i.zmdi-icon {
+.button.button-with-icon i.ledger-icon {
   padding-right: 7px;
 }
 
