--- a/src/scss/components/entity_profile_frame/layout.scss
+++ b/src/scss/components/entity_profile_frame/layout.scss
@@ -40,7 +40,8 @@
 }
 
 .entity-profile-frame-header-action-button {
-  left: -40px;
+  cursor: pointer;
+  display: inline-block;
   font-size: 20px;
   font-weight: 400;
   line-height: 20px;
@@ -48,7 +49,7 @@
   height: 36px;
   width: 36px;
 
-  .zmdi-star {
+  .ledger-icon-star {
     color: #f2bf58;
   }
 
