--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -48,7 +48,7 @@
   display: block;
 }
 
-:not(.sidebar-collapsed) .sidebar:hover > .sidebar-toggle i {
+.sidebar-collapsed .sidebar:hover > .sidebar-toggle i {
   -ms-transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
