Force drawer  with 100% width on mobile and bump version 2.0.66

--- a/src/scss/components/drawer.scss
+++ b/src/scss/components/drawer.scss
@@ -41,6 +41,7 @@
 
 @media (max-width: 375px) {
   .drawer-frame.drawer-frame-list {
-    width: 90% !important;
+    width: 100% !important;
+    border-radius: 0 !important;
   }
 }
