--- a/src/scss/layout/admin/drawer.scss
+++ b/src/scss/layout/admin/drawer.scss
@@ -25,7 +25,8 @@
 
 @media (max-width: 375px) {
   .drawer-container {
-    width: 90% !important;
+    width: 100% !important;
+    border-radius: 0 !important;
   }
 }
 
