--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -121,7 +121,7 @@ header {
   font-size: 11px;
   font-weight: 700;
   height: 22px;
-  right: 0;
+  right: -10px;
   left: auto;
   line-height: 24px;
   min-width: 22px;
