Fixed font icon typo

--- a/src/scss/fonts/ledger.css
+++ b/src/scss/fonts/ledger.css
@@ -294,7 +294,7 @@
 .ledger-icon-more-vert:before {
   content: "\f19b";
 }
-.ledger-icon-oppportunity:before {
+.ledger-icon-opportunity:before {
   content: "\e944";
 }
 .ledger-icon-people:before {
