--- a/src/scss/components/card/layout.scss
+++ b/src/scss/components/card/layout.scss
@@ -19,6 +19,11 @@
   font-size: 15px;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.32);
+
+  > i {
+    font-size: 24px;
+    vertical-align: bottom;
+  }
 }
 
 .card-subheader {
