--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -31,13 +31,14 @@
   text-align: center;
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  bottom: 10px;
   right: -6px;
   transform: translate(-50%, -50%);
   background-color: #fff;
   box-shadow: 0 0 4px 0 rgba(12, 13, 13, 0.05), 0 2px 4px 0 rgba(12, 13, 13, 0.15);
   border-radius: 0 4px 4px 0;
   color: #000;
+  z-index: 1;
 }
 
 .sidebar {
