--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?6wapg1') format('truetype'),
-    url('../../fonts/Ledger.woff?6wapg1') format('woff'),
-    url('../../fonts/Ledger.svg?6wapg1#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?4ujopp') format('truetype'),
+    url('../../fonts/Ledger.woff?4ujopp') format('woff'),
+    url('../../fonts/Ledger.svg?4ujopp#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -54,9 +54,6 @@
 .ledger-icon-arrow-collapse-left:before {
   content: "\e909";
 }
-.ledger-icon-arrow-down-sort:before {
-  content: "\e90b";
-}
 .ledger-icon-arrow-expand-down:before {
   content: "\e90d";
 }
@@ -100,7 +97,10 @@
   content: "\f28c";
 }
 .ledger-icon-carat-down:before {
-  content: "\e90c";
+  content: "\f2f2";
+}
+.ledger-icon-carat-up:before {
+  content: "\f2f8";
 }
 .ledger-icon-chat:before {
   content: "\e91b";
