Updated Ledger font with logo icon and bump version 2.0.73

--- a/src/scss/error.scss
+++ b/src/scss/error.scss
@@ -19,8 +19,8 @@
 
   .logo {
     margin-top: 32px;
-    width: 82px;
-    height: auto;
+    font-size: 64px;
+    color: #1350aa;
   }
 
   .jumbo {
