--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -269,7 +269,8 @@
 }
 
 .sidebar-brand-icon {
-  height: 30px;
+  font-size: 30px;
+  color: #dce3e6;
   left: 22px;
   bottom: 1px;
   position: relative;
