--- a/src/scss/layout/auth/index.scss
+++ b/src/scss/layout/auth/index.scss
@@ -67,7 +67,8 @@
   border-radius: 0 12px 12px 0;
 
   .logo {
-    width: 82px;
+    font-size: 82px;
+    color: #fff;
   }
 }
 
@@ -113,7 +114,7 @@
     height: 100px;
 
     .logo {
-      width: 38px;
+      font-size: 38px;
     }
 
     &:before,
