--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?4ujopp') format('truetype'),
-    url('../../fonts/Ledger.woff?4ujopp') format('woff'),
-    url('../../fonts/Ledger.svg?4ujopp#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?w3alj1') format('truetype'),
+    url('../../fonts/Ledger.woff?w3alj1') format('woff'),
+    url('../../fonts/Ledger.svg?w3alj1#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -260,6 +260,9 @@
 }
 .ledger-icon-lock:before {
   content: "\e93d";
+}
+.ledger-icon-logo:before {
+  content: "\e900";
 }
 .ledger-icon-logout:before {
   content: "\e93e";
