--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -32,13 +32,21 @@
   cursor: pointer;
   position: absolute;
   bottom: 10px;
-  right: -6px;
+  right: -39px;
+  width: 36px;
+  height: 36px;
   transform: translate(-50%, -50%);
   background-color: #fff;
   box-shadow: 0 0 4px 0 rgba(12, 13, 13, 0.05), 0 2px 4px 0 rgba(12, 13, 13, 0.15);
   border-radius: 0 4px 4px 0;
   color: #000;
   z-index: 1;
+}
+
+@media (max-width: 991.98px) {
+  .sidebar-toggle {
+    display: none;
+  }
 }
 
 .sidebar {
@@ -282,8 +290,9 @@
   width: 295px;
   z-index: 12;
 
-  .sidebar-toggle {
-    display: none;
+  .sidebar-toggle i:before {
+    content: '\e920';
+    font-family: 'Ledger';
   }
 
   .content {
