Repalced Material-Design-Iconic-Font and fontello with Ledger font

--- a/src/scss/components/form/calendar.scss
+++ b/src/scss/components/form/calendar.scss
@@ -58,7 +58,7 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-family: 'Material-Design-Iconic-Font';
+      font-family: 'Ledger';
       font-size: 24px;
       height: 30px;
       line-height: 30px;
@@ -91,7 +91,7 @@
 
       &:after {
         color: #696e6f;
-        content: '\f2fa';
+        content: '\e910';
       }
     }
 
@@ -100,7 +100,7 @@
 
       &:after {
         color: #696e6f;
-        content: '\f2fb';
+        content: '\e90f';
       }
     }
 
