--- a/src/scss/components/form/checkbox.scss
+++ b/src/scss/components/form/checkbox.scss
@@ -132,9 +132,9 @@
   &:after {
     background: 0 0;
     color: #696e6f;
-    content: '\e819';
+    content: '\e93d';
     display: inline-block;
-    font-family: fontello;
+    font-family: 'Ledger';
     font-size: 18px;
     font-weight: 400;
     height: 100%;
