--- a/src/scss/components/form/form_wizard.scss
+++ b/src/scss/components/form/form_wizard.scss
@@ -83,11 +83,11 @@
         content: '\f26b';
         display: inline;
         float: right;
-        font-family: 'Material-Design-Iconic-Font';
+        font-family: 'Ledger';
         font-weight: 300;
         height: auto;
         text-shadow: none;
-        margin-right: 7px;
+        margin-right: 8px;
         text-indent: 0;
       }
 
