--- a/src/scss/components/form/rating.scss
+++ b/src/scss/components/form/rating.scss
@@ -7,7 +7,7 @@
   }
 
   .star {
-    font-family: 'Material-Design-Iconic-Font';
+    font-family: 'Ledger';
     font-weight: normal;
     font-style: normal;
     font-size: 3em;
@@ -16,7 +16,7 @@
 
     &.is-selected,
     &.is-empty {
-      font-family: 'Material-Design-Iconic-Font';
+      font-family: 'Ledger';
       font-weight: normal;
       font-style: normal;
       font-size: 3em;
@@ -29,7 +29,7 @@
     }
 
     &:before {
-      content: '\f27c';
+      content: '\f27d';
       padding-right: 5px;
       color: #696e6f;
     }
