--- a/src/scss/components/entity_related/stats.scss
+++ b/src/scss/components/entity_related/stats.scss
@@ -73,6 +73,7 @@
   .entity-stats-bar-chart {
     display: table;
     table-layout: fixed;
+    width: 100%;
     height: 200px;
     border-bottom: 1px solid #f0f0f0;
     margin: 0;
@@ -102,7 +103,7 @@
           word-wrap: break-word;
           font-size: 13px;
           font-weight: 500;
-          color: #f0f0f0;
+          color: #979797;
         }
 
         .value {
