--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -107,7 +107,7 @@
 
 .activity-item-extra {
   font-size: 12px;
-  color: #696e6f;
+  color: #979797;
   padding: 5px 0;
 
   > span + span {
@@ -120,7 +120,7 @@
   flex-direction: row;
   font-size: 15px;
   font-weight: 600;
-  color: #696e6f;
+  color: #979797;
   margin-top: 24px;
 
   > div {
