--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -189,8 +189,25 @@
     width: 100%;
     height: 60px;
 
-    .icon {
-      padding-top: 0 !important;
+    .option-text .text > div {
+      line-height: normal;
+    }
+
+    .sidebar-brand-logo,
+    .sidebar-brand-icon {
+      font-size: 30px;
+      color: #dce3e6;
+      transition: opacity 0.3s;
+      -webkit-transition: opacity 0.3s;
+    }
+
+    .sidebar-brand-logo {
+      font-weight: 600;
+      opacity: 0;
+
+      small {
+        font-size: 11px;
+      }
     }
   }
 
@@ -276,16 +293,6 @@
   }
 }
 
-.sidebar-brand-icon {
-  font-size: 30px;
-  color: #dce3e6;
-  left: 22px;
-  bottom: 1px;
-  position: relative;
-  transition: opacity 0.3s;
-  -webkit-transition: opacity 0.3s;
-}
-
 .sidebar-collapsed .sidebar {
   width: 295px;
   z-index: 12;
@@ -293,6 +300,10 @@
   .sidebar-toggle i:before {
     content: '\e920';
     font-family: 'Ledger';
+  }
+
+  .sidebar-brand-logo {
+    opacity: 1;
   }
 
   .content {
