Changed cardgrid height to show last card shadow and bump version 2.0.82

--- a/src/scss/components/table/cardgrid.scss
+++ b/src/scss/components/table/cardgrid.scss
@@ -38,6 +38,11 @@
       background-color: transparent;
       overflow-x: unset;
     }
+
+    &.datagrid-hover,
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   .datagrid-header-cell {
