Updated option-list-item-icon style and bump version 2.0.83

--- a/src/scss/components/form/dropdown_option_list.scss
+++ b/src/scss/components/form/dropdown_option_list.scss
@@ -52,7 +52,10 @@
   color: #696e6f;
   font-size: 22px !important;
   vertical-align: top;
+  text-align: center;
   margin-right: 15px;
+  width: 22px;
+  height: 22px;
 }
 
 .option-list-item-text {
