--- a/src/scss/components/form/accordion.scss
+++ b/src/scss/components/form/accordion.scss
@@ -58,10 +58,38 @@
   color: #757575;
   background: #fafafa;
   border-bottom: 1px solid #e0e0e0;
-  padding: 5px 27px;
+  padding: 24px;
   font-size: 13px;
 }
 
 .accordion-group-empty {
   margin: 15px 0;
+}
+
+.modal .accordion-groups,
+.entity-details .accordion-groups {
+  border: none;
+  border-top: 1px solid #e0e0e0;
+  box-shadow: none;
+  margin: 0 -25px;
+
+  .accordion-group-header,
+  .accordion-group-content {
+    background-color: transparent;
+  }
+}
+
+.modal .accordion-groups {
+  margin-left: -30px;
+  margin-right: -30px;
+
+  .accordion-group-header,
+  .accordion-group-content {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.modal .entity-field .accordion-groups {
+  margin-right: -118px;
 }
