--- a/src/scss/components/entity_profile_frame/details.scss
+++ b/src/scss/components/entity_profile_frame/details.scss
@@ -10,6 +10,11 @@
   flex-shrink: 0;
   flex-basis: 0;
   overflow-y: auto;
+
+  hr {
+    margin-left: -25px;
+    margin-right: -25px;
+  }
 }
 
 .entity-list {
