Fixed toggle-button-group style

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -463,6 +463,8 @@
 .toggle-button-group {
   position: absolute;
   left: 50%;
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
