--- a/src/scss/components/entity_activity/layout.scss
+++ b/src/scss/components/entity_activity/layout.scss
@@ -62,4 +62,14 @@
 
 .list-page-container .entity-activity {
   box-shadow: none;
+  height: -webkit-calc(100% - 64px);
+  height: calc(100% - 64px);
 }
+
+@media (max-width: 991.98px) {
+  .list-page-container .entity-activity {
+    height: -webkit-calc(100% - 128px);
+    height: calc(100% - 128px);
+  }
+}
+
