Fixed floating label with rating and bump version 2.0.89

--- a/src/scss/components/form/floating_label.scss
+++ b/src/scss/components/form/floating_label.scss
@@ -127,11 +127,12 @@
     padding: 0;
   }
 
-  > .rating {
-    padding: 23px 13px;
-
-    .star {
-      font-size: 32px !important;
-    }
+  > .rating .star {
+    font-size: 32px !important;
   }
+}
+
+.modal .has-floating-label > .rating {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
