Updated Ledger font and bump version 2.0.92

--- a/src/scss/components/form/calendar.scss
+++ b/src/scss/components/form/calendar.scss
@@ -91,7 +91,7 @@
 
       &:after {
         color: #696e6f;
-        content: '\e910';
+        content: '\e912'; // ledger-icon-chevron-left
       }
     }
 
@@ -100,7 +100,7 @@
 
       &:after {
         color: #696e6f;
-        content: '\e90f';
+        content: '\e914'; // ledger-icon-chevron-right
       }
     }
 
