--- a/src/scss/components/form/checkbox.scss
+++ b/src/scss/components/form/checkbox.scss
@@ -132,7 +132,7 @@
   &:after {
     background: 0 0;
     color: #696e6f;
-    content: '\e93d';
+    content: '\e93f'; // ledger-icon-lock
     display: inline-block;
     font-family: 'Ledger';
     font-size: 18px;
