--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?lsyjbb') format('truetype'),
-    url('../../fonts/Ledger.woff?lsyjbb') format('woff'),
-    url('../../fonts/Ledger.svg?lsyjbb#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?qgtw4c') format('truetype'),
+    url('../../fonts/Ledger.woff?qgtw4c') format('woff'),
+    url('../../fonts/Ledger.svg?qgtw4c#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -40,25 +40,25 @@
 }
 
 .ledger-icon-activity:before {
-  content: "\e903";
+  content: "\e90c";
 }
 .ledger-icon-alert-circle:before {
-  content: "\f1f1";
+  content: "\e907";
 }
 .ledger-icon-alert-circle-o:before {
-  content: "\f1f0";
-}
-.ledger-icon-arrow-back:before {
   content: "\e908";
 }
-.ledger-icon-arrow-collapse-left:before {
-  content: "\e909";
-}
-.ledger-icon-arrow-expand-down:before {
+.ledger-icon-arrow-back:before {
   content: "\e90d";
 }
-.ledger-icon-arrow-expand-right:before {
+.ledger-icon-arrow-collapse-left:before {
   content: "\e90e";
+}
+.ledger-icon-arrow-expand-down:before {
+  content: "\e90f";
+}
+.ledger-icon-arrow-expand-right:before {
+  content: "\e910";
 }
 .ledger-icon-arrow-left:before {
   content: "\f2ff";
@@ -67,19 +67,19 @@
   content: "\f301";
 }
 .ledger-icon-arrow-up-down:before {
-  content: "\e911";
-}
-.ledger-icon-assigments:before {
   content: "\e913";
 }
-.ledger-icon-attach:before {
-  content: "\e916";
-}
-.ledger-icon-attach-messages:before {
+.ledger-icon-assigments:before {
   content: "\e915";
 }
-.ledger-icon-bell:before {
+.ledger-icon-attach:before {
+  content: "\e918";
+}
+.ledger-icon-attach-messages:before {
   content: "\e917";
+}
+.ledger-icon-bell:before {
+  content: "\e919";
 }
 .ledger-icon-bookmark:before {
   content: "\f11e";
@@ -88,10 +88,10 @@
   content: "\f11d";
 }
 .ledger-icon-business:before {
-  content: "\e919";
+  content: "\e91b";
 }
 .ledger-icon-buzz:before {
-  content: "\e91a";
+  content: "\e91c";
 }
 .ledger-icon-camera:before {
   content: "\f28c";
@@ -103,199 +103,199 @@
   content: "\f2f8";
 }
 .ledger-icon-chat:before {
-  content: "\e91b";
+  content: "\e91d";
 }
 .ledger-icon-check:before {
   content: "\f26b";
 }
 .ledger-icon-check-circle:before {
-  content: "\f269";
+  content: "\e906";
 }
 .ledger-icon-check-square:before {
   content: "\f26a";
 }
 .ledger-icon-chevron-down:before {
-  content: "\e90a";
+  content: "\e911";
 }
 .ledger-icon-chevron-left:before {
-  content: "\e910";
-}
-.ledger-icon-chevron-right:before {
-  content: "\e90f";
-}
-.ledger-icon-chevron-up:before {
   content: "\e912";
 }
+.ledger-icon-chevron-right:before {
+  content: "\e914";
+}
+.ledger-icon-chevron-up:before {
+  content: "\e916";
+}
 .ledger-icon-circle:before {
-  content: "\f26d";
+  content: "\e909";
 }
 .ledger-icon-circle-o:before {
-  content: "\f26c";
+  content: "\e90b";
 }
 .ledger-icon-clock:before {
-  content: "\e91f";
+  content: "\e921";
 }
 .ledger-icon-close:before {
-  content: "\e920";
+  content: "\e922";
 }
 .ledger-icon-close-circle:before {
-  content: "\e91e";
+  content: "\e920";
 }
 .ledger-icon-columns-reset:before {
   content: "\f235";
 }
 .ledger-icon-comment:before {
-  content: "\f262";
+  content: "\e900";
 }
 .ledger-icon-connect:before {
-  content: "\e921";
-}
-.ledger-icon-conversion-reset:before {
-  content: "\e922";
-}
-.ledger-icon-copy:before {
   content: "\e923";
 }
-.ledger-icon-customers:before {
+.ledger-icon-conversion-reset:before {
   content: "\e924";
 }
-.ledger-icon-dashboard:before {
+.ledger-icon-copy:before {
   content: "\e925";
 }
-.ledger-icon-date-big:before {
+.ledger-icon-customers:before {
   content: "\e926";
 }
-.ledger-icon-date-o:before {
+.ledger-icon-dashboard:before {
   content: "\e927";
+}
+.ledger-icon-date-big:before {
+  content: "\e928";
+}
+.ledger-icon-date-o:before {
+  content: "\e929";
 }
 .ledger-icon-delete:before {
   content: "\e968";
 }
 .ledger-icon-dot-circle:before {
-  content: "\f26f";
+  content: "\e91a";
 }
 .ledger-icon-dot-circle-alt:before {
   content: "\f26e";
 }
 .ledger-icon-download:before {
-  content: "\e92a";
+  content: "\e92c";
 }
 .ledger-icon-drag-handle:before {
   content: "\e974";
 }
 .ledger-icon-edit:before {
-  content: "\e945";
+  content: "\e947";
 }
 .ledger-icon-emoji:before {
-  content: "\e92b";
-}
-.ledger-icon-events:before {
-  content: "\e92c";
-}
-.ledger-icon-extension:before {
-  content: "\e906";
-}
-.ledger-icon-eye:before {
-  content: "\e92e";
-}
-.ledger-icon-eye-off:before {
   content: "\e92d";
 }
-.ledger-icon-file:before {
+.ledger-icon-events:before {
+  content: "\e92e";
+}
+.ledger-icon-extension:before {
+  content: "\e91e";
+}
+.ledger-icon-eye:before {
+  content: "\e930";
+}
+.ledger-icon-eye-off:before {
   content: "\e92f";
 }
+.ledger-icon-file:before {
+  content: "\e931";
+}
 .ledger-icon-filter:before {
-  content: "\e930";
+  content: "\e932";
 }
 .ledger-icon-filter-target:before {
   content: "\f382";
 }
 .ledger-icon-flag:before {
-  content: "\e914";
+  content: "\e91f";
 }
 .ledger-icon-flash:before {
-  content: "\f166";
+  content: "\e901";
 }
 .ledger-icon-flash-off:before {
-  content: "\f165";
+  content: "\e902";
 }
 .ledger-icon-forms-sales:before {
-  content: "\e931";
-}
-.ledger-icon-forms-service:before {
-  content: "\e932";
-}
-.ledger-icon-full-page:before {
   content: "\e933";
 }
-.ledger-icon-globe:before {
-  content: "\e904";
-}
-.ledger-icon-goal:before {
+.ledger-icon-forms-service:before {
   content: "\e934";
 }
-.ledger-icon-help:before {
+.ledger-icon-full-page:before {
   content: "\e935";
 }
-.ledger-icon-info:before {
+.ledger-icon-globe:before {
+  content: "\e92a";
+}
+.ledger-icon-goal:before {
   content: "\e936";
 }
-.ledger-icon-items:before {
+.ledger-icon-help:before {
   content: "\e937";
 }
-.ledger-icon-leaderboard:before {
+.ledger-icon-info:before {
   content: "\e938";
 }
-.ledger-icon-leads:before {
+.ledger-icon-items:before {
   content: "\e939";
 }
-.ledger-icon-level-access:before {
+.ledger-icon-leaderboard:before {
   content: "\e93a";
 }
-.ledger-icon-link:before {
+.ledger-icon-leads:before {
   content: "\e93b";
 }
-.ledger-icon-local-florist:before {
-  content: "\e905";
+.ledger-icon-level-access:before {
+  content: "\e93c";
 }
-.ledger-icon-lock:before {
+.ledger-icon-link:before {
   content: "\e93d";
 }
-.ledger-icon-logo:before {
-  content: "\e900";
+.ledger-icon-local-florist:before {
+  content: "\e92b";
 }
-.ledger-icon-logout:before {
-  content: "\e93e";
-}
-.ledger-icon-menu:before {
+.ledger-icon-lock:before {
   content: "\e93f";
 }
-.ledger-icon-messages:before {
+.ledger-icon-logo:before {
+  content: "\e93e";
+}
+.ledger-icon-logout:before {
   content: "\e940";
+}
+.ledger-icon-menu:before {
+  content: "\e941";
+}
+.ledger-icon-messages:before {
+  content: "\e942";
 }
 .ledger-icon-minus:before {
   content: "\f273";
 }
 .ledger-icon-minus-circle:before {
-  content: "\f271";
+  content: "\e943";
 }
 .ledger-icon-minus-circle-outline:before {
-  content: "\f270";
+  content: "\e944";
 }
 .ledger-icon-minus-square:before {
   content: "\f272";
 }
 .ledger-icon-money-coin:before {
-  content: "\e941";
+  content: "\e945";
 }
 .ledger-icon-money-pile:before {
-  content: "\e942";
+  content: "\e946";
 }
 .ledger-icon-mood:before {
-  content: "\f214";
+  content: "\e948";
 }
 .ledger-icon-mood-bad:before {
-  content: "\f213";
+  content: "\e949";
 }
 .ledger-icon-more:before {
   content: "\f19c";
@@ -304,19 +304,19 @@
   content: "\f19b";
 }
 .ledger-icon-opportunity:before {
-  content: "\e944";
+  content: "\e94a";
 }
 .ledger-icon-people:before {
-  content: "\e946";
+  content: "\e94b";
 }
 .ledger-icon-percentage:before {
-  content: "\e947";
+  content: "\e94c";
 }
 .ledger-icon-person:before {
-  content: "\e948";
+  content: "\e94d";
 }
 .ledger-icon-phone:before {
-  content: "\e949";
+  content: "\e94e";
 }
 .ledger-icon-pin:before {
   content: "\f08d";
@@ -331,52 +331,52 @@
   content: "\f278";
 }
 .ledger-icon-plus-circle:before {
-  content: "\f276";
+  content: "\e94f";
 }
 .ledger-icon-plus-circle-o:before {
-  content: "\f275";
+  content: "\e950";
 }
 .ledger-icon-plus-square:before {
   content: "\f277";
 }
 .ledger-icon-print:before {
-  content: "\e94a";
+  content: "\e951";
 }
 .ledger-icon-projects:before {
-  content: "\e94b";
+  content: "\e952";
 }
 .ledger-icon-refresh:before {
   content: "\f1b9";
 }
 .ledger-icon-reply:before {
-  content: "\e94c";
+  content: "\e953";
 }
 .ledger-icon-reports:before {
-  content: "\e94d";
+  content: "\e954";
 }
 .ledger-icon-request:before {
-  content: "\e94e";
+  content: "\e955";
 }
 .ledger-icon-reset-photo:before {
   content: "\f372";
 }
 .ledger-icon-restaurant:before {
-  content: "\e907";
+  content: "\e956";
 }
 .ledger-icon-search:before {
-  content: "\e94f";
+  content: "\e957";
 }
 .ledger-icon-sent:before {
-  content: "\e950";
+  content: "\e958";
 }
 .ledger-icon-service:before {
-  content: "\e951";
+  content: "\e959";
 }
 .ledger-icon-services:before {
-  content: "\e952";
+  content: "\e95a";
 }
 .ledger-icon-settings:before {
-  content: "\e953";
+  content: "\e95b";
 }
 .ledger-icon-shield-check:before {
   content: "\f1c7";
@@ -394,19 +394,19 @@
   content: "\f279";
 }
 .ledger-icon-stage:before {
-  content: "\e954";
+  content: "\e95c";
 }
 .ledger-icon-star:before {
-  content: "\f27d";
+  content: "\e903";
 }
 .ledger-icon-star-circle:before {
-  content: "\f27a";
+  content: "\e905";
 }
 .ledger-icon-star-half:before {
-  content: "\f27b";
+  content: "\e904";
 }
 .ledger-icon-star-outline:before {
-  content: "\f27c";
+  content: "\e95d";
 }
 .ledger-icon-status:before {
   content: "\f1e2";
@@ -418,65 +418,65 @@
   content: "\e962";
 }
 .ledger-icon-tag-call:before {
-  content: "\e958";
-}
-.ledger-icon-tag-closed:before {
-  content: "\e959";
-}
-.ledger-icon-tag-comment:before {
-  content: "\e95a";
-}
-.ledger-icon-tag-email:before {
-  content: "\e95b";
-}
-.ledger-icon-tag-file:before {
-  content: "\e95c";
-}
-.ledger-icon-tag-project:before {
-  content: "\e95d";
-}
-.ledger-icon-tag-rating:before {
   content: "\e95e";
 }
-.ledger-icon-tag-reopened:before {
+.ledger-icon-tag-closed:before {
   content: "\e95f";
 }
-.ledger-icon-tag-return:before {
+.ledger-icon-tag-comment:before {
   content: "\e960";
 }
-.ledger-icon-tag-stream:before {
+.ledger-icon-tag-email:before {
   content: "\e961";
 }
-.ledger-icon-talk:before {
+.ledger-icon-tag-file:before {
   content: "\e963";
 }
-.ledger-icon-tax:before {
+.ledger-icon-tag-project:before {
   content: "\e964";
 }
-.ledger-icon-tickets:before {
+.ledger-icon-tag-rating:before {
   content: "\e965";
 }
-.ledger-icon-transactions:before {
+.ledger-icon-tag-reopened:before {
+  content: "\e966";
+}
+.ledger-icon-tag-return:before {
   content: "\e967";
 }
-.ledger-icon-unread:before {
+.ledger-icon-tag-stream:before {
   content: "\e969";
 }
-.ledger-icon-view-card:before {
+.ledger-icon-talk:before {
   content: "\e96a";
 }
-.ledger-icon-view-chart:before {
+.ledger-icon-tax:before {
   content: "\e96b";
 }
-.ledger-icon-view-column:before {
+.ledger-icon-tickets:before {
   content: "\e96c";
 }
+.ledger-icon-transactions:before {
+  content: "\e96d";
+}
+.ledger-icon-unread:before {
+  content: "\e96e";
+}
+.ledger-icon-view-card:before {
+  content: "\e96f";
+}
+.ledger-icon-view-chart:before {
+  content: "\e970";
+}
+.ledger-icon-view-column:before {
+  content: "\e971";
+}
 .ledger-icon-view-list:before {
-  content: "\e93c";
+  content: "\e972";
 }
 .ledger-icon-view-stream:before {
-  content: "\e957";
+  content: "\e973";
 }
 .ledger-icon-view-timeline:before {
-  content: "\e966";
+  content: "\e975";
 }
