--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -299,7 +299,7 @@
   z-index: 12;
 
   .sidebar-toggle i:before {
-    content: '\e920';
+    content: '\e922'; // ledger-icon-close
     font-family: 'Ledger';
   }
 
