--- a/src/scss/components/form/layout.scss
+++ b/src/scss/components/form/layout.scss
@@ -123,7 +123,7 @@ select {
     label::after,
     .col-form-label::after {
       margin-left: 4px;
-      content: '\e93d';
+      content: '\e93f'; // ledger-icon-lock
       font-family: 'Ledger';
       font-weight: 400;
       font-size: inherit;
