--- a/src/scss/components/form/rating.scss
+++ b/src/scss/components/form/rating.scss
@@ -29,7 +29,7 @@
     }
 
     &:before {
-      content: '\f27d';
+      content: '\e903'; // ledger-icon-star
       padding-right: 5px;
       color: #696e6f;
     }
@@ -38,14 +38,14 @@
   &:not(.is-readonly) .star:hover {
     &:before,
     ~ .star:before {
-      content: '\f27d';
+      content: '\e903'; // ledger-icon-star
       color: #f4b400;
     }
   }
 
   .star {
     &.is-selected:before {
-      content: '\f27d';
+      content: '\e903'; // ledger-icon-star
       padding-right: 5px;
       color: #f4b400;
     }
