--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -62,7 +62,7 @@
             font-size: 16px;
             font-family: 'Ledger';
             height: auto;
-            content: '\f2f2';
+            content: '\f2f2'; // ledger-icon-carat-down
             font-weight: 300;
             text-shadow: none;
             position: relative;
