--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -469,6 +469,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  background-color: #fcfcfc;
 
   .toggle-button {
     color: #696e6f;
