Fixed toggle-button-group transform

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -465,6 +465,7 @@
   left: 50%;
   -ms-transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
