--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -1,8 +1,5 @@
-.has-navigation .navigation-main {
-  visibility: visible;
-}
-
 .navigation-main {
+  visibility: hidden;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -77,9 +74,12 @@
         padding: 0;
         left: 50%;
         top: 0;
-        visibility: hidden;
+        display: none;
         opacity: 0;
         min-width: calc(100% + 4px);
+        max-height: 400px;
+        overflow: hidden;
+        overflow-y: auto;
         padding: 18px 25px;
         background: #fff;
         z-index: 1;
@@ -104,7 +104,7 @@
       }
 
       &:hover > .sub-menu {
-        visibility: visible;
+        display: block;
         opacity: 1;
         -webkit-transform: translate3d(34%, 0, 0);
         transform: translate3d(34%, 0, 0);
@@ -143,6 +143,10 @@
         color: #fff;
       }
 
+      &.is-more > a {
+        font-size: 24px;
+      }
+
       &.is-active {
         background: transparent;
         border-bottom: 4px solid #545454;
@@ -166,9 +170,7 @@
           top: -7px;
           left: -4px;
           min-width: calc(100% + 4px);
-          padding: 0 25px;
-          padding-top: 68px;
-          padding-bottom: 18px;
+          padding: 0 25px 18px;
           background: #fff;
           z-index: 1;
           position: absolute;
@@ -191,18 +193,33 @@
         }
       }
 
+      &:last-child {
+        > ul {
+          left: auto;
+          right: -4px;
+        }
+
+        .sub-menu {
+          left: 0;
+          -webkit-transform: translate3d(-94%, 0, 0);
+          transform: translate3d(-94%, 0, 0);
+          -ms-transform: translate(-94%, 0);
+        }
+      }
+
       &.open > {
         ul {
           display: block;
+          border-top: 57px solid #fff;
 
           &:before {
             content: '';
             position: absolute;
             height: 1px;
-            top: 55px;
+            top: -1px;
             left: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.07);
+            border-bottom: 1px solid #f5f5f5;
           }
 
           > li {
@@ -298,5 +315,72 @@
     li > a {
       color: #545454;
     }
+  }
+}
+
+.has-navigation .navigation-main {
+  visibility: visible;
+}
+
+@media (max-width: 991.98px) {
+  .navigation-main > ul > li {
+    &.is-more > ul {
+      width: 300px;
+    }
+
+    &.opening > ul {
+      max-height: 400px;
+      overflow: hidden;
+      overflow-y: auto;
+
+      > li {
+        border-bottom: 1px solid #f5f5f5;
+
+        &:last-child {
+          border-bottom: none;
+        }
+      }
+
+      li {
+        a > .arrow::before {
+          -webkit-transform: inherit;
+          transform: inherit;
+          -ms-transform: inherit;
+        }
+
+        &:hover {
+          background: #fff;
+
+          > a > .arrow::before {
+            -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+          }
+        }
+      }
+    }
+
+    .sub-menu {
+      position: relative;
+      box-shadow: none;
+      -webkit-transform: translate3d(0, 0, 0) !important;
+      transform: translate3d(0, 0, 0) !important;
+      -ms-transform: translate(0, 0) !important;
+      max-height: inherit;
+      margin: 0 -25px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+
+      > li > a {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+}
+
+@media (max-width: 991.98px) and (max-height: 575.98px) {
+  .navigation-main > ul > li.opening > ul {
+    max-height: 250px;
   }
 }
