--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -42,7 +42,7 @@
           text-decoration: none;
         }
 
-        .arrow {
+        .navigation-arrow {
           position: relative;
           display: -webkit-inline-box;
           display: -webkit-inline-flex;
@@ -70,7 +70,7 @@
         }
       }
 
-      .sub-menu {
+      .navigation-subnav {
         padding: 0;
         left: 50%;
         top: 0;
@@ -103,7 +103,7 @@
         }
       }
 
-      &:hover > .sub-menu {
+      &:hover > .navigation-subnav {
         display: block;
         opacity: 1;
         -webkit-transform: translate3d(34%, 0, 0);
@@ -143,7 +143,7 @@
         color: #fff;
       }
 
-      &.is-more > a {
+      &.navigation-morenav > a {
         font-size: 24px;
       }
 
@@ -199,7 +199,7 @@
           right: -4px;
         }
 
-        .sub-menu {
+        .navigation-subnav {
           left: 0;
           -webkit-transform: translate3d(-94%, 0, 0);
           transform: translate3d(-94%, 0, 0);
@@ -247,7 +247,7 @@
               -ms-flex-pack: justify;
               justify-content: space-between;
 
-              > .arrow:before {
+              > .navigation-arrow:before {
                 -webkit-transform: rotate(-90deg);
                 -ms-transform: rotate(-90deg);
                 transform: rotate(-90deg);
@@ -324,7 +324,8 @@
 
 @media (max-width: 991.98px) {
   .navigation-main > ul > li {
-    &.is-more > ul {
+    &.navigation-has-secondary > ul,
+    &.navigation-morenav > ul {
       width: 300px;
     }
 
@@ -342,7 +343,7 @@
       }
 
       li {
-        a > .arrow::before {
+        a > .navigation-arrow::before {
           -webkit-transform: inherit;
           transform: inherit;
           -ms-transform: inherit;
@@ -350,17 +351,22 @@
 
         &:hover {
           background: #fff;
+        }
 
-          > a > .arrow::before {
-            -webkit-transform: rotate(180deg);
-            -ms-transform: rotate(180deg);
-            transform: rotate(180deg);
-          }
+        &.is-expanded > a > .navigation-arrow::before,
+        .navigation-has-secondary .is-expanded > .a > .navigation-arrow::before,
+        .navigation-morenav .is-expanded > .a > .navigation-arrow::before {
+          -webkit-transform: rotate(180deg);
+          -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+          -webkit-transform-origin: 50% 45%;
+          -ms-transform-origin: 50% 45%;
+          transform-origin: 50% 45%;
         }
       }
     }
 
-    .sub-menu {
+    .navigation-subnav {
       position: relative;
       box-shadow: none;
       -webkit-transform: translate3d(0, 0, 0) !important;
