--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -103,6 +103,7 @@
         }
       }
 
+      &.is-expanded > .navigation-subnav,
       &:hover > .navigation-subnav {
         display: block;
         opacity: 1;
@@ -182,6 +183,7 @@
             padding: 5px 25px;
 
             &.is-active,
+            &.is-expanded,
             &:hover {
               background: #f5f5f5;
             }
@@ -349,6 +351,7 @@
           -ms-transform: inherit;
         }
 
+        &.is-expanded,
         &:hover {
           background: #fff;
         }
